agregando box 2 y fondo

--- a/sprint_1_Adrian/Index.html
+++ b/sprint_1_Adrian/Index.html
@@ -12,13 +12,13 @@
 
             <div class="nav-bar">
         
-                <a href="#"><img class="logo" src="/sprint_1_Adrian/images/logo.png" alt="logo"></a>
+                <a href="#"><img class="logo" src="images/logo.png" alt="logo"></a>
                 <div class="nav-menu">
-                    <a href="#">Inicio</a>
-                    <a href="#">Rutas</a>
-                    <a href="#">Hoteles</a>
-                    <a href="#">Vuelos</a>
-                    <a href="#">Contactos</a>
+                    <a class="nav-item" href="#">Inicio</a>
+                    <a class="nav-item" href="#">Rutas</a>
+                    <a class="nav-item" href="#">Hoteles</a>
+                    <a class="nav-item" href="#">Vuelos</a>
+                    <a class="nav-item" href="#">Contactos</a>
                 </div>
                 <div class="nav-social">twitter facebook</div>
         
