acabando la pagina principal
falta la fecha de las imagenes y los responsive

--- a/sprint_1_Adrian/Index.html
+++ b/sprint_1_Adrian/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/9f113f2e1c.js"crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Practica Sprint 1</title>
 </head>
@@ -11,7 +12,6 @@
         <div class="header">
 
             <div class="nav-bar">
-        
                 <a href="#"><img class="logo" src="images/logo.png" alt="logo"></a>
                 <div class="nav-menu">
                     <a class="nav-item" href="#">Inicio</a>
@@ -21,13 +21,62 @@
                     <a class="nav-item" href="#">Contactos</a>
                 </div>
                 <div class="nav-social">twitter facebook</div>
-        
             </div>
             <div class="box-2">
                 <p>"Disfruta de la experiencia de otros viajeros"</p>
             </div>
-
         </div>
+
+        <div class="article-layout">
+
+            <article>
+                <img class="article-img" src="/sprint_1_Adrian/images/sakura.jpg" alt="cerezos">
+                <h2>CULTURA</h2>
+                <div class="article-text">
+                    <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis ullam, in nisi vel facere velit beatae, natus alias quibusdam at nulla? Accusamus dignissimos natus sequi, maxime placeat quis fugiat quo!</P>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti illum vel asperiores voluptas id provident officiis eaque optio. Nihil ea hic minima quia eveniet est aspernatur deserunt ipsa sed laborum!</p>
+                </div>
+                <br>
+                <a class="leer-mas" href="#">Leer mas...</a>
+            </article>
+
+            <article>
+                <img class="article-img" src="/sprint_1_Adrian/images/comida.jpg" alt="comida">
+                <h2>GASTRONOMÍA</h2>
+                <div class="article-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eos accusantium repudiandae reiciendis ea distinctio consequatur placeat exercitationem facilis error dicta accusamus vitae aspernatur velit corporis commodi, doloribus eveniet. Sunt?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem iste deserunt fuga laborum, eius repellendus? Blanditiis harum quibusdam enim ratione doloribus! Tempore quod libero sequi mollitia dolor? Deleniti, ipsum earum.</p>
+                </div>
+                <br><a class="leer-mas" href="#">Leer mas...</a>
+            </article>
+            <article>
+                <img class="article-img" src="/sprint_1_Adrian/images/fuji.jpg" alt="fuji">
+                <h2>TURISMO</h2>
+                <div class="article-text">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic ea, ex officia veniam architecto qui voluptatibus neque, fugiat quisquam ipsa, eum ipsam? Non molestiae, laborum expedita dolorem fugiat odit sunt.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi id doloremque rem perferendis vero corporis eaque facere omnis adipisci tempore, voluptas molestiae nemo sapiente quod aperiam laborum ad obcaecati deserunt.</p>
+                </div>
+                <br><a class="leer-mas" href="#">Leer mas...</a>
+            </article>
+            <article>
+                <img class="article-img" src="/sprint_1_Adrian/images/noche.jpg" alt="noche">
+                <h2>VIDA NOCTURNA</h2>
+                <div class="article-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non odit dolorem, unde fuga quam, sint facere voluptatum, libero vero qui autem quae ratione perferendis. Quae architecto dolor incidunt adipisci.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus tempora voluptatem maxime eos corporis dolorem dolor provident illo esse voluptate itaque laboriosam repellat consequatur veniam, nisi fuga ut quo?</p>
+                </div>
+                <br><a class="leer-mas" href="#">Leer mas...</a>
+            </article>
+            <p class="texto-secundario">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, quibusdam autem doloremque doloribus corrupti, dolore nobis eos alias facere hic cum facilis est, dolores molestias voluptate tempore?
+            </p>
+        </div>
+
+        <aside>
+            <h2>Lorem, ipsum dolor.</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem nulla maiores, adipisci, numquam reprehenderit quasi dignissimos eveniet quidem architecto omnis modi, minima ut assumenda rem dicta! Quos minus asperiores nesciunt?
+        </aside>
+
+        <footer><div>2021 Japan Tourism</div></footer>
 
     </div>
 </body>
