--- a/sprint_1_Adrian/Index.html
+++ b/sprint_1_Adrian/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/9f113f2e1c.js"crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/9f113f2e1c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Practica Sprint 1</title>
 </head>
@@ -14,13 +14,13 @@
             <div class="nav-bar">
                 <a href="#"><img class="logo" src="images/logo.png" alt="logo"></a>
                 <div class="nav-menu">
-                    <a class="nav-item" href="#">Inicio</a>
-                    <a class="nav-item" href="#">Rutas</a>
-                    <a class="nav-item" href="#">Hoteles</a>
-                    <a class="nav-item" href="#">Vuelos</a>
-                    <a class="nav-item" href="#">Contactos</a>
+                    <a class="nav-item" href="#"><i class="fas fa-home"></i>Inicio</a>
+                    <a class="nav-item" href="#"><i class="fas fa-map-marked-alt"></i>Rutas</a>
+                    <a class="nav-item" href="#"><i class="fas fa-h-square"></i>Hoteles</a>
+                    <a class="nav-item" href="#"><i class="fas fa-plane"></i>Vuelos</a>
+                    <a class="nav-item" href="#"><i class="fas fa-envelope-open-text"></i>Contactos</a>
                 </div>
-                <div class="nav-social">twitter facebook</div>
+                <div class="nav-social"><a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-facebook-square"></i></a></div>
             </div>
             <div class="box-2">
                 <p>"Disfruta de la experiencia de otros viajeros"</p>
@@ -30,7 +30,10 @@
         <div class="article-layout">
 
             <article>
-                <img class="article-img" src="/sprint_1_Adrian/images/sakura.jpg" alt="cerezos">
+                <div class="img-text">
+                    <img class="article-img" src="/angular_Adrian_IT/sprint_1_Adrian/images/sakura.jpg" alt="cerezos">
+                    <p class="date">3 de mayo</p>
+                </div>
                 <h2>CULTURA</h2>
                 <div class="article-text">
                     <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis ullam, in nisi vel facere velit beatae, natus alias quibusdam at nulla? Accusamus dignissimos natus sequi, maxime placeat quis fugiat quo!</P>
@@ -41,7 +44,7 @@
             </article>
 
             <article>
-                <img class="article-img" src="/sprint_1_Adrian/images/comida.jpg" alt="comida">
+                <img class="article-img" src="/angular_Adrian_IT/sprint_1_Adrian/images/comida.jpg" alt="comida">
                 <h2>GASTRONOMÍA</h2>
                 <div class="article-text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eos accusantium repudiandae reiciendis ea distinctio consequatur placeat exercitationem facilis error dicta accusamus vitae aspernatur velit corporis commodi, doloribus eveniet. Sunt?</p>
@@ -50,7 +53,7 @@
                 <br><a class="leer-mas" href="#">Leer mas...</a>
             </article>
             <article>
-                <img class="article-img" src="/sprint_1_Adrian/images/fuji.jpg" alt="fuji">
+                <img class="article-img" src="/angular_Adrian_IT/sprint_1_Adrian/images/fuji.jpg" alt="fuji">
                 <h2>TURISMO</h2>
                 <div class="article-text">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic ea, ex officia veniam architecto qui voluptatibus neque, fugiat quisquam ipsa, eum ipsam? Non molestiae, laborum expedita dolorem fugiat odit sunt.</p>
@@ -59,7 +62,7 @@
                 <br><a class="leer-mas" href="#">Leer mas...</a>
             </article>
             <article>
-                <img class="article-img" src="/sprint_1_Adrian/images/noche.jpg" alt="noche">
+                <img class="article-img" src="images/noche.jpg" alt="noche">
                 <h2>VIDA NOCTURNA</h2>
                 <div class="article-text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non odit dolorem, unde fuga quam, sint facere voluptatum, libero vero qui autem quae ratione perferendis. Quae architecto dolor incidunt adipisci.</p>
