animaciones añadidas y fechas en imagenes

--- a/sprint_1_Adrian/Index.html
+++ b/sprint_1_Adrian/Index.html
@@ -23,16 +23,15 @@
                 <div class="nav-social"><a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-facebook-square"></i></a></div>
             </div>
             <div class="box-2">
-                <p>"Disfruta de la experiencia de otros viajeros"</p>
+                <span>"Disfruta de la experiencia de otros viajeros"</span>
             </div>
         </div>
 
         <div class="article-layout">
 
             <article>
-                <div class="img-text">
-                    <img class="article-img" src="/angular_Adrian_IT/sprint_1_Adrian/images/sakura.jpg" alt="cerezos">
-                    <p class="date">3 de mayo</p>
+                <div class="img-text cultura">
+                    <div class="date">3 de mayo 2021</div>
                 </div>
                 <h2>CULTURA</h2>
                 <div class="article-text">
@@ -44,7 +43,9 @@
             </article>
 
             <article>
-                <img class="article-img" src="/angular_Adrian_IT/sprint_1_Adrian/images/comida.jpg" alt="comida">
+                <div class="img-text gastronomia">
+                    <div class="date">1 de mayo 2021</div>
+                </div>
                 <h2>GASTRONOMÍA</h2>
                 <div class="article-text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis eos accusantium repudiandae reiciendis ea distinctio consequatur placeat exercitationem facilis error dicta accusamus vitae aspernatur velit corporis commodi, doloribus eveniet. Sunt?</p>
@@ -53,7 +54,9 @@
                 <br><a class="leer-mas" href="#">Leer mas...</a>
             </article>
             <article>
-                <img class="article-img" src="/angular_Adrian_IT/sprint_1_Adrian/images/fuji.jpg" alt="fuji">
+                <div class="img-text turismo">
+                    <div class="date">22 de abril 2021</div>
+                </div>
                 <h2>TURISMO</h2>
                 <div class="article-text">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic ea, ex officia veniam architecto qui voluptatibus neque, fugiat quisquam ipsa, eum ipsam? Non molestiae, laborum expedita dolorem fugiat odit sunt.</p>
@@ -62,7 +65,9 @@
                 <br><a class="leer-mas" href="#">Leer mas...</a>
             </article>
             <article>
-                <img class="article-img" src="images/noche.jpg" alt="noche">
+                <div class="img-text vida-nocturna">
+                    <div class="date">30 de marzo 2021</div>
+                </div>
                 <h2>VIDA NOCTURNA</h2>
                 <div class="article-text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non odit dolorem, unde fuga quam, sint facere voluptatum, libero vero qui autem quae ratione perferendis. Quae architecto dolor incidunt adipisci.</p>
