--- a/sprint_1_Adrian/Index.html
+++ b/sprint_1_Adrian/Index.html
@@ -29,7 +29,7 @@
 
         <div class="article-layout">
 
-            <article>
+            <article class="a-cultura">
                 <div class="img-text cultura">
                     <div class="date">3 de mayo 2021</div>
                 </div>
@@ -42,7 +42,7 @@
                 <a class="leer-mas" href="#">Leer mas...</a>
             </article>
 
-            <article>
+            <article class="a-gastronomia">
                 <div class="img-text gastronomia">
                     <div class="date">1 de mayo 2021</div>
                 </div>
@@ -53,7 +53,7 @@
                 </div>
                 <br><a class="leer-mas" href="#">Leer mas...</a>
             </article>
-            <article>
+            <article class="a-turismo">
                 <div class="img-text turismo">
                     <div class="date">22 de abril 2021</div>
                 </div>
@@ -64,7 +64,7 @@
                 </div>
                 <br><a class="leer-mas" href="#">Leer mas...</a>
             </article>
-            <article>
+            <article class="a-vidaNocturna">
                 <div class="img-text vida-nocturna">
                     <div class="date">30 de marzo 2021</div>
                 </div>
