--- a/sprint_2_Adrian/index.html
+++ b/sprint_2_Adrian/index.html
@@ -10,23 +10,23 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light mt-3">
+        <div class="container-xl">
             <a href="#" class="navbar-brand justify-content-start"><img src="./Imagenes/logo-bookmark.svg" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav mx-3">
+                <ul class="navbar-nav mx-3 fw-bold">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">FEATURES</a>
+                        <a class="nav-link text-secondary" aria-current="page" href="#">FEATURES</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#">PRICING</a>
+                        <a class="nav-link text-secondary" href="#">PRICING</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#">CONTACT</a>
+                        <a class="nav-link text-secondary" href="#">CONTACT</a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link rounded bg-primary text-white">LOGIN</a>
@@ -35,6 +35,17 @@
             </div>
         </div>
     </nav>
+    <div class="container-xl mt-5 row justify-content-center">
+        <div class="col">
+            <h1 class="fw-bold">A Simple Bookmark Manager</h1>
+            <p class="text-secondary">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+            <button class="btn btn-primary m-2 shadow-sm">Get it on Chrome</button>
+            <button class="btn btn-light m-2 shadow-sm">Get it on Firefox</button>
+        </div>
+        <div class="col">
+            <img src="./Imagenes/illustration-hero.svg">
+        </div>
+    </div>
 </body>
 
 </html>
