--- a/sprint_2_Adrian/index.html
+++ b/sprint_2_Adrian/index.html
@@ -66,10 +66,128 @@
             </li>
         </ul>
     </div>
-    <div class="container-xl mt-5">
-        <img src="./Imagenes/illustration-features-tab-1.svg" alt="">
+    <div class="container-xl mb-5">
+        <div class="row mt-5">
+            <div class="col">
+                <img src="./Imagenes/illustration-features-tab-1.svg" alt="">
+            </div>
+            <div class="col align-self-center">
+                <h2 class="fw-bold">Bookmark in one click</h2>
+                <p class="text-muted">Organize your bookmark however you like. Our simple drag-and-drop interface gives
+                    you complete control over hover how you manage your favourite sites</p>
+                <button class="btn btn-primary">More Info</button>
+            </div>
+        </div>
     </div>
+    <!-- Download -->
+    <div class="container-xl pt-5">
+        <div class="text-center">
+            <h2 class="fw-bold">Download the extension</h2>
+            <p class="text-muted">We've got more browsers in the pipeline. Please do let us know if you've got a
+                favourite you'd like us to prioritize</p>
+        </div>
 
+        <div class="row justify-content-center">
+            <div class="card shadow mb-5 mx-5 mt-2" style="width: 18rem;">
+                <img src="./Imagenes/logo-chrome.svg" class="card-img-top w-50 align-self-center mt-5" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title fw-bold">Add to Chrome</h5>
+                    <p class="card-text text-muted">Minimum version 62</p>
+                    <p class="text-muted fs-4">. . . . . . . . . . . . . . . . . . . .</p>
+                    <a href="#" class="btn btn-primary">Add & install extension</a>
+                </div>
+            </div>
+            <div class="card shadow mb-5 mt-3" style="width: 18rem;">
+                <img src="./Imagenes/logo-firefox.svg" class="card-img-top w-50 align-self-center mt-5" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title fw-bold">Add to Firefox</h5>
+                    <p class="card-text text-muted">Minimum version 55</p>
+                    <p class="text-muted fs-4">. . . . . . . . . . . . . . . . . . . . </p>
+                    <a href="#" class="btn btn-primary">Add & install extension</a>
+                </div>
+            </div>
+            <div class="card shadow mb-5 mx-5 mt-4" style="width: 18rem;">
+                <img src="./Imagenes/logo-opera.svg" class="card-img-top w-50 align-self-center mt-5" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title fw-bold">Add to Opera</h5>
+                    <p class="card-text text-muted">Minimum version 46</p>
+                    <p class="text-muted fs-4">. . . . . . . . . . . . . . . . . . . . </p>
+                    <a href="#" class="btn btn-primary">Add & install extension</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- FAQS -->
+        <div class="text-center">
+            <h2 class="fw-bold">Frequently Asked Questions</h2>
+            <p class="text-muted">Here are some of our FAQs. If you have any other questions you'd like answered please
+                feel free to email us.</p>
+        </div>
+        
+        <div class="accordion accordion-flush w-50 mt-5" id="accordionFlushExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        What is a Bookmark?
+                    </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
+                        the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        How can i request a new browser?
+                    </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
+                        the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine
+                        this being filled with some actual content.</div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        Is there a mobile app?
+                    </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
+                        the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more
+                        exciting happening here in terms of content, but just filling up the space to make it look, at
+                        least at first glance, a bit more representative of how this would look in a real-world
+                        application.</div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                            What about other Chromium browsers?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
+                            the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more
+                            exciting happening here in terms of content, but just filling up the space to make it look, at
+                            least at first glance, a bit more representative of how this would look in a real-world
+                            application.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
 </body>
 
 </html>
