--- a/sprint_2_Adrian/index.html
+++ b/sprint_2_Adrian/index.html
@@ -37,16 +37,19 @@
         </div>
     </nav>
     <!-- Principal -->
-    <div class="d-flex container-xl mt-5 text-center">
-        <div class="align-self-center">
-            <h1 class="col fw-bold">A Simple Bookmark Manager</h1>
-            <p class="text-muted">A clean and simple interface to organize your favourite websites. Open a new browser
-                tab and see your sites load instantly. Try it for free.</p>
-            <button class="btn btn-primary m-2 shadow-sm">Get it on Chrome</button>
-            <button class="btn btn-light m-2 shadow-sm text-muted">Get it on Firefox</button>
-        </div>
-        <div>
-            <img src="./Imagenes/illustration-hero.svg">
+    <div class="container-xl">
+
+        <div class=" row justify-content-center mt-5">
+            <div class="col align-self-center">
+                <h1 class="fw-bold">A Simple Bookmark Manager</h1>
+                <p class="text-muted">A clean and simple interface to organize your favourite websites. Open a new browser
+                    tab and see your sites load instantly. Try it for free.</p>
+                <button class="btn btn-primary m-2 shadow-sm">Get it on Chrome</button>
+                <button class="btn btn-light m-2 shadow-sm text-muted">Get it on Firefox</button>
+            </div>
+            <div class="col">
+                <img src="./Imagenes/illustration-hero.svg">
+            </div>
         </div>
     </div>
     <!-- Features -->
@@ -118,106 +121,115 @@
         </div>
 
         <!-- FAQS -->
-        <div class="text-center">
-            <h2 class="fw-bold">Frequently Asked Questions</h2>
-            <p class="text-muted">Here are some of our FAQs. If you have any other questions you'd like answered please
-                feel free to email us.</p>
-        </div>
-        <div class="justify-content-center">
+        <div class="row">
 
-            <div class="accordion accordion-flush w-50 mt-5 mb-5" id="accordionFlushExample">
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                            What is a Bookmark?
-                        </button>
-                    </h2>
-                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                        data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                            demonstrate
-                            the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                            How can i request a new browser?
-                        </button>
-                    </h2>
-                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
-                        data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                            demonstrate
-                            the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's
-                            imagine
-                            this being filled with some actual content.</div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseThree" aria-expanded="false"
-                            aria-controls="flush-collapseThree">
-                            Is there a mobile app?
-                        </button>
-                    </h2>
-                    <div id="flush-collapseThree" class="accordion-collapse collapse"
-                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                            demonstrate
-                            the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing
-                            more
-                            exciting happening here in terms of content, but just filling up the space to make it look,
-                            at
-                            least at first glance, a bit more representative of how this would look in a real-world
-                            application.</div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingFour">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseFour" aria-expanded="false"
-                            aria-controls="flush-collapseFour">
-                            What about other Chromium browsers?
-                        </button>
-                    </h2>
-                    <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
-                        data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                            demonstrate
-                            the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing
-                            more
-                            exciting happening here in terms of content, but just filling up the space to make it look,
-                            at
-                            least at first glance, a bit more representative of how this would look in a real-world
-                            application.</div>
+            <div class="col text-center">
+                <h2 class="fw-bold">Frequently Asked Questions</h2>
+                <p class="text-muted">Here are some of our FAQs. If you have any other questions you'd like answered please
+                    feel free to email us.</p>
+            </div>
+            <div class="container-fluid">
+    
+                <div class="col justify-content-center">
+        
+                    <div class="accordion accordion-flush w-50 mt-5 mb-5" id="accordionFlushExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                    What is a Bookmark?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                                data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                                    demonstrate
+                                    the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                    How can i request a new browser?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                                data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                                    demonstrate
+                                    the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's
+                                    imagine
+                                    this being filled with some actual content.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                    aria-controls="flush-collapseThree">
+                                    Is there a mobile app?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                                    demonstrate
+                                    the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing
+                                    more
+                                    exciting happening here in terms of content, but just filling up the space to make it look,
+                                    at
+                                    least at first glance, a bit more representative of how this would look in a real-world
+                                    application.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="flush-headingFour">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseFour" aria-expanded="false"
+                                    aria-controls="flush-collapseFour">
+                                    What about other Chromium browsers?
+                                </button>
+                            </h2>
+                            <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
+                                data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                                    demonstrate
+                                    the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing
+                                    more
+                                    exciting happening here in terms of content, but just filling up the space to make it look,
+                                    at
+                                    least at first glance, a bit more representative of how this would look in a real-world
+                                    application.</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
 
-        <footer class=" container-fluid bg-primary">
+    </div>
+    <!-- Footer -->
+    <footer class="bg-primary">
+        <div class="row">
             <div class="text-white p-5">
                 <p class="text-center">35.000+ ALDREDY JOINED</p>
                 <p class="text-center">Stay up-to-date with what we're doing</p>
             </div>
-            <div>
-                <form class="was-validated">
-                    <div class="mb-3">
+            <div class="">
+                <form class="text-center was-validated">
+                    <div class="d-flex mb-3">
                         <label for="exampleInputEmail1" class="form-label text-white">Email address</label>
                         <input type="email" class="form-control w-25" id="exampleInputEmail1" aria-describedby="emailHelp" required>
                         <div class="valid-feedback">Valid.</div>
                         <div class="invalid-feedback">Please fill out this field.</div>
                         </div>
+                        <button type="submit" class="btn btn-secondary">Submit</button>
                     </div>
-                    <button type="submit" class="btn btn-secondary">Submit</button>
                 </form>
             </div>
-            <div class="d-flex justify-content-center py-2" style="background-color: darkblue;" >
+            <div class="d-flex justify-content-center py-2 mt-4" style="background-color: darkblue;" >
                 <a href="#" class="nav-link"><img  src="./Imagenes/logo-bookmark.svg" alt=""></a>
                 <a class="mx-4 text-white nav-link" href="#">FEATURES</a>
                 <a class="mx-4 text-white nav-link" href="#">PRICING</a>
@@ -225,8 +237,9 @@
                 <a class="nav-link" href="#"><img src="./Imagenes/icon-facebook.svg" alt=""></a>
                 <a class="nav-link" href="#"><img src="./Imagenes/icon-twitter.svg" alt=""></a>
             </div>
-        </footer>
-    </div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
